# LinkedIn_Solvers

./: CMakeLists.txt  Menu.cpp  Menu.h  QueenSolver.cpp  QueenSolver.h  QueenSolverMenu.cpp  QueenSolverMenu.h  Solver.cpp  Solver.h  Window.cpp  main.cpp
Player/: cookies.json  package-lock.json  package.json
Player/extensions/LinkedIn.GameSolver/: DemoQueenSolver.ts  QueenSolver.ts  Solver.ts  index.ts
Solver/: .gitignore  CMakeLists.txt  QueenSolverMenu.cpp  QueenSolverMenu.h  main.cpp
Solver/Queens/: QueenSolver.cpp  QueenSolver.h  QueenSolverMenu.cpp  QueenSolverMenu.h  QueensGenerator.cpp  QueensGenerator.h
Solver/Shared/: Grid.h  Vec2.h
Solver/Tango/: TangoSolver.cpp  TangoSolver.h  TangoSolverMenu.cpp  TangoSolverMenu.h
Solver/UI/: Grid.h  IRenderable.h  ImGuiExtensions.h  Menu.cpp  Menu.h  Window.h
Tampermonkey/: QueensSolver.js  QueensSolver_Demo.js
